- WL#14440: Support for authentication_kerberos_client authentication plugin
- WL#14237: Support query attributes
- BUG#32778827: Raise an error if the _id is different when replacing a document
- BUG#32740486: Fix typo in docstring
- BUG#32623479: The X DevAPI returns str for binary types values
- BUG#32585611: Fix broken links in X DevAPI reference documentation search

v8.0.25
=======

This release contains no functional changes and is published to align
the version number with the MySQL Server 8.0.25 release.

v8.0.24
=======

- WL#14424: Improve timeout error messages
- WL#14240: Remove Python 3.5 support
- WL#14239: Remove Python 2.7 support
- WL#14212: Support connection close notification
- WL#14027: Add support for Python 3.9
- BUG#32532744: MSI destination folder page lacks details of what installs
- BUG#32497631: Prepared statements fail when parameters are not given
- BUG#32496788: Prepared statements accepts any type of parameters
- BUG#32435181: Add support for Django 3.2
- BUG#32162928: Change user command fails on pure python implementation
- BUG#32120659: Prepared statements w/o parameters violates MySQL protocol
- BUG#32039427: Remove python 3.4 support in MSI packaging
- BUG#32029891: Add context manager support for pooled connections
- BUG#31490101: Fix wrong cast of Python unicode to std::string
- BUG#31315173: Added documentation for multi-host and failover
- BUG#30416704: Binary columns returned as strings

v8.0.23
=======

- WL#14263: Add support for SCRAM-SHA-256
- WL#14238: Deprecate Python 2.7 support
- WL#14215: Replace language in APIs and source code/docs
- WL#14213: Support GSSAPI - Kerberos auth
- BUG#32165864: Fix segmentation fault when using invalid SQL with prepared statements
- BUG#31882419: Fix error when getting the connection ID from a CMySQLConnection
- BUG#29195610: Fix cursor.callproc() using namedtuple and dictionary cursors
- BUG#26834307: Make cursor.fetchone() and cursor.fetchmany() PEP 249 compliant